remove unnecessary controllers + simplify controller execution + add missing controllers
