# packages/back/controllers/invitation/delete.controller.mjs
@@ -3,13 +3,13 @@ import E from 'http-errors'
 import V from '../../validations.mjs'
 import { Invitation } from '../../models.mjs'
 
-export async function controller(req, res, next) {
+export async function controller(req, res) {
   const doc = await Invitation.deleteOne(
     { _id: req.params.id, $or: [{ inviterId: req.user._id }, { inviteeId: req.user._id }] }
   )
 
   if (doc.deletedCount !== 1)
-    return next(new E.NotFound())
+    throw new E.NotFound()
 
   return res.status(204).send()
 }
