# packages/back/router.mjs
@@ -6,10 +6,10 @@ import BearerStrategy from 'passport-http-bearer'
 import { User } from './models.mjs'
 
 import * as authLoginPost from './controllers/auth/login.controller.mjs'
-import * as homeDelete    from './controllers/home/delete.controller.mjs'
-import * as homePost      from './controllers/home/post.controller.mjs'
+import * as homeGet       from './controllers/home/get.controller.mjs'
 import * as inviteAccept  from './controllers/invitation/accept.controller.mjs'
 import * as inviteDelete  from './controllers/invitation/delete.controller.mjs'
+import * as inviteGet     from './controllers/invitation/get.controller.mjs'
 import * as invitePost    from './controllers/invitation/post.controller.mjs'
 import * as userGet       from './controllers/user/get.controller.mjs'
 import * as userPost      from './controllers/user/post.controller.mjs'
@@ -30,7 +30,7 @@ const bearerAuth = passport.authenticate('bearer', { session: false })
  * @param  {Object}   schemas Schemas to validate as { key: schmas }
  * @return {Function}         Validation middleware
  */
-function validate(schemas) {
+function validate({ schemas }) {
   return (req, res, next) => {
     for (const [key, schema] of Object.entries(schemas)) {
       const { error, value } = schema.validate(req[key])
@@ -43,15 +43,25 @@ function validate(schemas) {
   }
 }
 
+function run({ controller }) {
+  return async(req, res, next) => {
+    try {
+      await controller(req, res)
+      next()
+    }
+    catch(err) {
+      next(err)
+    }
+  }
+}
+
 export default express.Router()
-  .post('/auth/login',                    validate(authLoginPost.schemas), authLoginPost.controller)
-  .post('/home',              bearerAuth, validate(homePost.schemas),      homePost.controller)
-  .delete('/home/:id',        bearerAuth, validate(homeDelete.schemas),    homeDelete.controller)
-  .post('/invitation',        bearerAuth, validate(invitePost.schemas),    invitePost.controller)
-  .delete('/invitation/:id',  bearerAuth, validate(inviteDelete.schemas),  inviteDelete.controller)
-  .delete(
-    '/invitation/:id/accept', bearerAuth, validate(inviteAccept.schemas),  inviteAccept.controller
-  )
-  .post('/user',                          validate(userPost.schemas),      userPost.controller )
-  .get('/user/:id',           bearerAuth, validate(userGet.schemas),       userGet.controller)
+  .post('/auth/login',                          validate(authLoginPost), run(authLoginPost))
+  .get('/home/:id',                 bearerAuth, validate(homeGet),       run(homeGet))
+  .post('/invitation',              bearerAuth, validate(invitePost),    run(invitePost))
+  .delete('/invitation/:id',        bearerAuth, validate(inviteDelete),  run(inviteDelete))
+  .delete('/invitation/:id/accept', bearerAuth, validate(inviteAccept),  run(inviteAccept))
+  .get('/invitation',               bearerAuth,                          run(inviteGet))
+  .post('/user',                                validate(userPost),      run(userPost) )
+  .get('/user/:id',                 bearerAuth, validate(userGet),       run(userGet))
   .use('*', (req, res, next) => next(new E.NotFound()))
